--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,14 @@ thiserror = "2.0.12"
 clap = { version = "4.5.40", features = ["derive"] }
 log = "0.4"
 env_logger = "0.11.8"
+
+# Profile configuration to optimize dependencies even in debug builds
+[profile.dev]
+# Keep your own code unoptimized for debugging
+opt-level = 0
+debug = true
+
+# Build all dependencies with release optimizations
+[profile.dev.package."*"]
+opt-level = 3
+debug = false
