--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ thiserror = "2.0.12"
 clap = { version = "4.5.40", features = ["derive"] }
 log = "0.4"
 env_logger = "0.11.8"
+tempfile = "3.20.0"
+erased-serde = "0.4.6"
 
 # Profile configuration to optimize dependencies even in debug builds
 [profile.dev]
