--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ dashmap = "6.1.0"
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
 zip = "4.2.0"
+crossbeam-channel = "0.5"
+memmap2 = "0.7"
 anyhow = "1.0"
 thiserror = "2.0.12"
 clap = { version = "4.5.40", features = ["derive"] }
