--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,10 @@ env_logger = "0.11.8"
 tempfile = "3.20.0"
 erased-serde = "0.4.6"
 
+[dev-dependencies]
+quick-xml = "0.38.0"
+tempfile = "3.20.0"
+
 # Profile configuration to optimize dependencies even in debug builds
 [profile.dev]
 # Keep your own code unoptimized for debugging
