--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ erased-serde = "0.4.6"
 [dev-dependencies]
 quick-xml = "0.38.0"
 tempfile = "3.20.0"
+assert_cmd = "2.0.17"
 
 # Profile configuration to optimize dependencies even in debug builds
 [profile.dev]
