--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ rayon = "1.6"
 dashmap = "6.1.0"
 csv = "1.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 zip = "4.2.0"
 crossbeam-channel = "0.5"
 memmap2 = "0.9.5"
