--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ tempfile = "3.20.0"
 quick-xml = "0.38.0"
 tempfile = "3.20.0"
 assert_cmd = "2.0.17"
+criterion = { version = "0.6", features = ["html_reports"] }
 
 # Profile configuration to optimize dependencies even in debug builds
 [profile.dev]
