--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,12 +16,15 @@ clap = { version = "4.5.40", features = ["derive"] }
 log = "0.4"
 env_logger = "0.11.8"
 tempfile = "3.20.0"
+tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "fs", "sync"] }
+async-trait = "0.1"
 
 [dev-dependencies]
 quick-xml = "0.38.0"
 tempfile = "3.20.0"
 assert_cmd = "2.0.17"
 criterion = { version = "0.6", features = ["html_reports"] }
+tokio-test = "0.4"
 
 # Profile configuration to optimize dependencies even in debug builds
 [profile.dev]
