--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ quick-xml = { version = "0.38.0"}
 rayon = "1.6"
 csv = "1.1"
 zip = "4.3.0"
+sevenz-rust = { version = "0.6", default-features = false, features = ["compress"] }
 crossbeam-channel = "0.5"
 memmap2 = "0.9.7"
 thiserror = "2.0.12"
