--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ zip = "4.6.0"
 crossbeam-channel = "0.5.15"
 memmap2 = "0.9.8"
 thiserror = "2.0.16"
+ahash = "0.8.11"
 clap = { version = "4.5.46", features = ["derive"] }
 log = "0.4.27"
 env_logger = "0.11.8"
